# NewNoteBlockStudio

./: .gitignore  CONTRIBUTING.md  README.md  app.py  interface.py  main.py  profiling.py  pyproject.toml  pyrightconfig.json  requirements.txt  test.nbs
nbs/: app.py  mainwindow.py
nbs/core/: data.py
nbs/ui/: components.py
src/main/python/: main.py
src/main/python/nbs/: app.py  app_playermode.py  mainwindow.py
src/main/python/nbs/controller/: clipboard.py  instrument.py  layer.py  playback.py  song.py
src/main/python/nbs/core/: audio.py  data.py  file.py  objects.py  song.py  utils.py
src/main/python/nbs/core/scripts/: load.py  save.py
src/main/python/nbs/ui/: actions.py  components.py  constants.py  file.py  layers.py  menus.py  piano.py  status_bar.py  toolbar.py  workspace.py  workspace2.py
src/main/python/nbs/ui/dialog/: instrument_settings.py
src/main/python/nbs/ui/qml/: BlackPianoKey.qml  NoteBlock.qml  NoteBlockFallArea.qml  Piano.qml  WhitePianoKey.qml  main.qml  playermode.py
src/main/python/nbs/ui/utils/: cache.py
src/main/python/nbs/ui/workspace/: constants.py  layers.py  note_blocks.py  piano.py  time_bar.py  workspace.py
src/main/python/nbs/utils/: file.py
src/main/python/tests/: conftest.py
src/main/python/tests/controller/: test_clipboard.py  test_layer.py
src/main/resources/base/songs/: celeste.nbs
