[tool.poetry]
name = "NewNoteBlockStudio"
version = "0.1.0"
description = "A modern, cross-platform version of Open Note Block Studio"
authors = ["Bentroen <bemcdc@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.6"
pynbs = "^1.1.0"
QtAwesome = "^1.1.1"
pydub = "^0.25.1"
sounddevice = "^0.4.4"
numpy = "^1.22.4"
fbs = {git = "https://github.com/Bentroen/fbs.git"}
samplerate = "^0.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
