[tool.poetry]
name = "NewNoteBlockStudio"
version = "0.1.0"
description = "A modern, cross-platform version of Open Note Block Studio"
authors = ["Bentroen <bemcdc@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.6"
pynbs = "^1.1.0"
QtAwesome = "^1.1.1"
numpy = "^1.26.4"
fbs = {git = "https://github.com/Bentroen/fbs.git"}
python-openal = {git = "https://github.com/koca2000/PyAL.git"}
soundfile = "^0.12.1"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-qt = "^4.3.1"
snakeviz = "^2.1.1"
pyqt5-stubs = "^5.15.6.0"

[tool.pyright]
root = "src/main/python"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=nbs"

[tool.isort]
profile = "black"
known_first_party = ["nbs"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
